# leadiel-ip

./: CMakeLists.txt  functions.cpp  functions.h  mainwindow.cpp  mainwindow.h  my_line_edit.h  pipeline.cpp  pipeline.h  sidebar.cpp  sidebar.h  topbar.cpp  topbar.h  viewer.cpp  viewer.h
